panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__constexpr__test_addressof_static_compound_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/constexpr/test_addressof_static_compound_literal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/constexpr/test_addressof_static_compound_literal.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct T~1
      (member x `int`)
      (member y `int`))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (hoisted-compound-literal compound_literal.5~6 `struct T~1 complete`)
         (declaration p~4 `ptr<struct T~1 complete>`
            (addressof
               (compound-literal
                  (declaration compound_literal.5~6 `struct T~1 complete`
                     (braced
                        1
                        2)))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d\n")
               (arrow x
                  (name p~4 `ptr<struct T~1 complete>`))
               (arrow y
                  (name p~4 `ptr<struct T~1 complete>`)))))))

----- stderr -----
