panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__constexpr__test_error_in_nested_unary_op.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/constexpr/test_error_in_nested_unary_op.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/constexpr/test_error_in_nested_unary_op.c"
   (struct T~0
      (member x (bitfield-width (compl (negate (cast `int` 0x8000'0000)))) `int`)))

----- stderr -----
